# importNumpy-DSAI-CPP-Hackathon

./: .gitignore  CLAUDE.md  DatathonHostPrompt.md  competition_plan.md  pyproject.toml  requirements.txt  run.sh
dashboard/: requirements.txt  run_local.ps1  run_local.sh
dashboard_api/: __init__.py  db.py  geo.py  main.py  settings.py
dashboard_web/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
docs/: DASHBOARD.md  PIPELINE_REFERENCE.md  STAKEHOLDER_GUIDE.md  dataset_audit_finding_overview.md  one_pager.md  plan-2-13.md  presentation_outline.md  prompt_to_data_contract.md
mortality_rates/: main.ipynb  nn_model.keras
notebooks/: _helpers.py  benchmark_comparison.ipynb  q1_outcome_geography.ipynb  q2_access_vs_outcomes.ipynb  q3_outlier_communities.ipynb  q4_sensitivity_tiers.ipynb  q5_sparse_reporting.ipynb  q6_premature_conclusions.ipynb  summary_executive.ipynb
pipeline/: __init__.py  config.py  phase1_ingest.py  phase2_profile.py  phase2b_synthetic_signatures.py  phase3_clean.py  phase4_views.py  phase4b_robust_views.py  phase5_prompt_gap_matrix.py  phase5b_ml_diagnostic.py  run_pipeline.py
presentation/: DND_2026_importNumpy.pptx  Talking_Points_Guide.docx  build_slides.py
reports/: assumption_log.csv  benchmark_comparison.html  data_quality_report.md  ml_diagnostic.json  prompt_gap_matrix.md  q1_outcome_geography.html  q2_access_vs_outcomes.html  q3_outlier_communities.html  q4_sensitivity_tiers.html  q5_sparse_reporting.html  q6_premature_conclusions.html  summary_executive.html  (+1 more)
(+31 files in other folders)
