[project]
name = "dnd-datathon-spring2026"
version = "0.1.0"
description = "DND Spring 2026 Datathon - Beyond: Distance, Access, and Outcome"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scipy>=1.14.0",
    "jupyterlab>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
